test/cli/test-mutating-policy/mutate-existing-same-trigger-and-target/resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: missing-cert-annotation
  namespace: workload
spec:
  ingressClassName: alb
  rules:
  - host: missing-cert-annotation.example.com
    http:
      paths:
      - backend:
          service:
            name: my-service
            port:
              number: 80
        path: /
        pathType: Prefix
